fix jumping behavior on firefox

--- a/client/src/PlanPage.css
+++ b/client/src/PlanPage.css
@@ -630,7 +630,7 @@ a.pill:active {
   }
   .row.map-plan-row {
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
   }
 
   .map-destination-links-container {
